Fix overflow modals on little screens

--- a/src/app/pages/clients/client-create-update-modal/client-create-update-modal.component.scss
+++ b/src/app/pages/clients/client-create-update-modal/client-create-update-modal.component.scss
@@ -1,11 +1,15 @@
 .full-screen-dialog .mat-dialog-container {
+  overflow-y: scroll !important;
   width: 90vw;
-  height: 90vh;
+  height: 120vh;
   max-width: 100vw;
   position: static;
   margin: 20px auto;
 }
 
+.full-screen-dialog {
+
+}
 .custom-card {
   transition: all 0.3s ease;
   box-shadow: none;
